--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,11 +3,19 @@
   padding: 0;
   margin: 0;
 }
+:root {
+  color-scheme: light only;
+}
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
 
 body {
@@ -20,10 +28,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
